--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ifc2osmod"
-version = "0.0.3"
+version = "0.0.4"
 authors = [
   { name="Kian Wee CHEN", email="chenkianwee@gmail.com" },
 ]
 description = 'Python-based command line tool for converting IFC files to Openstudio models'
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.13"
 classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
                "Programming Language :: Python :: 3.10",
                "Operating System :: OS Independent"]
-dependencies = ['ifc_utils==0.0.2',
-                'openstudio==3.7.0',
-                'ladybug-core==0.42.24',
-                'setuptools==74.1.2'
+dependencies = ['ifc_utils==0.0.3',
+                'openstudio==3.8.0',
+                'ladybug-core==0.43.22',
+                'setuptools==75.8.0'
                 ]
 
 [project.urls]
